--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             margin-bottom:10px;
         }
     </style>
+    <script src="config.js"></script>
 </head>
 <body>
 
@@ -54,43 +55,26 @@
 </div>
 
 <script>
-const API_BASE = "https://script.google.com/macros/s/AKfycbwJQgvLaOQRs5sxp4GxTdH401aDeW5Bp0cPMbAT9p-0Pno6KvHORKQnFpZfHpuS1K4/exec";
+
 
 async function loadApartments() {
     const ul = document.getElementById("apt-list");
 
-    try {
-        // לוקחים את כל הדיווחים, ומוצאים מזה רשימת דירות ייחודית
-        const res = await fetch(API_BASE + "?action=get_all_reports");
-        const data = await res.json();
+    // מציג את כל הדירות מתוך APARTMENTS — בלי קשר לדיווחים
+    ul.innerHTML = "";
 
-        if (!data.ok) {
-            throw new Error(data.error || "API error");
-        }
+    Object.entries(APARTMENTS).forEach(([id, name]) => {
+        const li = document.createElement("li");
+        const a = document.createElement("a");
 
-        const reports = data.reports || [];
-        const uniqueIds = [...new Set(reports.map(r => String(r.apartment_id)))];
+        a.href = "dashboard.html?apartment_id=" + encodeURIComponent(id);
+        a.textContent = name;
 
-        if (uniqueIds.length === 0) {
-            ul.innerHTML = "<li>אין דירות במערכת.</li>";
-            return;
-        }
-
-        ul.innerHTML = "";
-        uniqueIds.forEach(id => {
-            const li = document.createElement("li");
-            const a = document.createElement("a");
-            a.href = "dashboard.html?apartment_id=" + encodeURIComponent(id);
-            a.textContent = "דירה " + id;
-            li.appendChild(a);
-            ul.appendChild(li);
-        });
-
-    } catch (err) {
-        console.error(err);
-        ul.innerHTML = "<li>שגיאה בטעינת הדירות.</li>";
-    }
+        li.appendChild(a);
+        ul.appendChild(li);
+    });
 }
+
 
 loadApartments();
 </script>
