--- a/report_step1.html
+++ b/report_step1.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <title>דיווח חדש – שלב 1</title>
 
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="mobile.css">
+
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -57,7 +60,7 @@
     </style>
 </head>
 <body>
-
+<div class="container">
 <header class="card">
     <a href="index.html">דף הבית</a> |
     <a href="all_reports.html">כל התקלות</a>
@@ -148,7 +151,7 @@ form.addEventListener("submit", function(e) {
     window.location.href = `report_step2.html?apartment_id=${encodeURIComponent(apartmentId)}`;
 });
 </script>
-
+</div>
 </body>
 </html>
 
