--- a/layout.html
+++ b/layout.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <title>ניהול דירות</title>
 
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="mobile.css">
+
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -135,7 +138,7 @@
     </style>
 </head>
 <body>
-
+<div class="container">
 <header class="card">
     <div class="top-nav">
         <div>
@@ -170,7 +173,7 @@
         });
     });
 </script>
-
+</div>
 </body>
 </html>
 
