--- a/report_step3.html
+++ b/report_step3.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <title>דיווח חדש – שלב 3</title>
 
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="mobile.css">
+
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -49,7 +52,7 @@
     <script src="config.js"></script>
 </head>
 <body>
-
+<div class="container">
 <header class="card">
     <a href="index.html">דף הבית</a> |
     <a href="all_reports.html">כל התקלות</a>
@@ -167,7 +170,7 @@ form.addEventListener("submit", async function(e) {
     }
 });
 </script>
-
+</div>
 </body>
 </html>
 
