added soinner loading

--- a/all_reports.html
+++ b/all_reports.html
@@ -84,9 +84,13 @@
     <a href="all_reports.html?status=done">תקלות שטופלו</a>
 </div>
 
-<div id="reports-container" class="table-wrapper">
-    טוען...
+<div id="reports-container">
+    <div class="loading-box">
+        <div>טוען...</div>
+        <div class="loader"></div>
+    </div>
 </div>
+
 
 <script>
 
