--- a/dashboard.html
+++ b/dashboard.html
@@ -96,7 +96,13 @@
         </a>
     </p>
 
-    <div id="reports-container" class="table-wrapper">טוען...</div>
+    <div id="reports-container" class="table-wrapper">
+        <div class="loader-box">
+            טוען...
+            <div class="loader"></div>
+        </div>
+    </div>
+
 </div>
 
 <script>
