--- a/index.html
+++ b/index.html
@@ -54,8 +54,14 @@
     <p>בחר דירה כדי להיכנס לדשבורד ולדווח על תקלות או חוסרים.</p>
 
     <ul id="apt-list">
-        <li>טוען...</li>
-    </ul>
+    <li>
+        <div class="loader-box">
+            טוען...
+            <div class="loader"></div>
+        </div>
+    </li>
+</ul>
+
 </div>
 
 <script>
