1. send mail when new report, remove fields from Zakif option, change rooms names

--- a/all_reports.html
+++ b/all_reports.html
@@ -133,7 +133,7 @@ function renderReports(reports){
         <thead>
             <tr>
                 <th>מספר</th>
-                <th>דירה</th>
+                <th>מתקן</th>
                 <th>תאריך</th>
                 <th>חדר</th>
                 <th>קטגוריה</th>
