--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="he" dir="rtl">
 <head>
     <meta charset="UTF-8">
-    <title>בחירת דירה</title>
+    <title>בחירת מתקן</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="mobile.css">
@@ -50,8 +50,8 @@
 </header>
 
 <div class="card container">
-    <h2>בחר דירה</h2>
-    <p>בחר דירה כדי להיכנס לדשבורד ולדווח על תקלות או חוסרים.</p>
+    <h2>בחר מתקן</h2>
+    <p>בחר מתקן כדי להיכנס לדשבורד ולדווח על תקלות או חוסרים.</p>
 
     <ul id="apt-list">
     <li>
