--- a/layout.html
+++ b/layout.html
@@ -142,7 +142,7 @@
 <header class="card">
     <div class="top-nav">
         <div>
-            <a href="index.html">בחירת דירה</a> &nbsp; | &nbsp;
+            <a href="index.html">בחירת מתקן</a> &nbsp; | &nbsp;
             <a href="all_reports.html">כל התקלות</a>
         </div>
         <div>
