--- a/all_reports.html
+++ b/all_reports.html
@@ -69,7 +69,7 @@
 </head>
 <body> <div class="container">
 
-<header>
+<header style="max-width:900px; margin:0 auto;">
     <a href="index.html">דף הבית</a> |
     <a href="all_reports.html">כל התקלות</a>
 </header>
