--- a/dashboard.html
+++ b/dashboard.html
@@ -5,6 +5,7 @@
     <title>מתקן</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="mobile.css">
 
     <style>
@@ -20,6 +21,7 @@
             margin-bottom:20px;
             border-radius:8px;
             box-shadow:0 0 5px rgba(0,0,0,0.15);
+            width: 100%;
         }
         a { color:#0066cc; text-decoration:none; }
         a:hover { text-decoration:underline; }
