--- a/layout.html
+++ b/layout.html
@@ -5,6 +5,7 @@
     <title>ניהול דירות</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="mobile.css">
 
     <style>
@@ -17,6 +18,7 @@
         }
         header {
             margin-bottom: 16px;
+            width: 100%;
         }
         a {
             text-decoration: none;
