--- a/all_reports.html
+++ b/all_reports.html
@@ -88,7 +88,7 @@
 
 <div id="reports-container">
     <div class="loading-box">
-        <div>טוען...</div>
+        <div class="loading-box">טוען...</div>
         <div class="loader"></div>
     </div>
 </div>
