--- a/dashboard.html
+++ b/dashboard.html
@@ -103,7 +103,7 @@
 
     <div id="reports-container" class="table-wrapper">
         <div class="loader-box">
-            טוען...
+            <div class="loading-box">טוען...</div>
             <div class="loader"></div>
         </div>
     </div>
