--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <ul id="apt-list">
     <li>
         <div class="loader-box">
-            טוען...
+            <div class="loading-box">טוען...</div>
             <div class="loader"></div>
         </div>
     </li>
