--- a/all_reports.html
+++ b/all_reports.html
@@ -16,14 +16,7 @@
             margin:0;
             padding:20px;
         }
-        header {
-            background:#fff;
-            padding:15px;
-            margin-bottom:20px;
-            border-radius:8px;
-            box-shadow:0 0 5px rgba(0,0,0,0.15);
-            width: 100%;
-        }
+
         a { color:#0066cc; text-decoration:none; }
         a:hover { text-decoration:underline; }
 
@@ -70,6 +63,11 @@
     <script src="config.js"></script>
 </head>
 <body> <div class="container">
+
+    <header>
+        <a href="index.html">דף הבית</a> |
+        <a href="all_reports.html">כל התקלות</a>
+    </header>
 
 <h2 class="page-title">כל התקלות במערכת</h2>
 
