--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
 </head>
 <body>
 <div class="container">
+    
+<header>
+    <a href="index.html">דף הבית</a> |
+    <a href="all_reports.html">כל התקלות</a>
+</header>
 
 <div class="card container">
     <h2>בחר מתקן</h2>
