--- a/dashboard.html
+++ b/dashboard.html
@@ -77,10 +77,11 @@
 <body>
 <div class="container">
 
-<header style="max-width:900px; margin:0 auto;">
+<header class="page-header">
     <a href="index.html">דף הבית</a> |
     <a href="all_reports.html">כל התקלות</a>
 </header>
+
 
 <div class="card container">
     <h2 id="apt-title" style="text-align:center; margin-top:10px;">מתקן</h2>
