--- a/layout.html
+++ b/layout.html
@@ -141,7 +141,7 @@
 </head>
 <body>
 <div class="container">
-<header class="page-header">
+<header class="card">
     <div class="top-nav">
         <div>
             <a href="index.html">בחירת מתקן</a> &nbsp; | &nbsp;
