--- a/all_reports.html
+++ b/all_reports.html
@@ -64,7 +64,7 @@
 </head>
 <body> <div class="container">
 
-    <header class="page-header">
+    <header>
         <a href="index.html">דף הבית</a> |
         <a href="all_reports.html">כל התקלות</a>
     </header>
