--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <body>
 <div class="container">
     
-<header class="page-header">
+<header>
     <a href="index.html">דף הבית</a> |
     <a href="all_reports.html">כל התקלות</a>
 </header>
